--- a/app/views/users/reviews.html.haml
+++ b/app/views/users/reviews.html.haml
@@ -4,6 +4,13 @@
 .row
   = render 'shared/left_navigation'
   .col-md-9
+    - if @reviews.empty?
+      .col-md-8.text-center
+        %h2 You have no Reviews
+        %h4 Be a Good guy and write one
+        %div-center
+          = link_to 'Choose company', listed_companies_path, class: 'btn btn-primary btn-lg'
+
     - @reviews.each do |review|
       .review
         .row.col-md-12
@@ -12,7 +19,8 @@
           wrote a review for
           %span.cl-effect-12
             = link_to review.company.name, '#'
-          %span.pull-right.time-ago= fa_icon 'clock-o', text: "#{time_ago_in_words(review.created_at)} ago"
+          %span.pull-right.time-ago= fa_icon 'clock-o',
+            text: "#{time_ago_in_words(review.created_at)} ago"
         .row.review-stars.col-md-12
           - full_star_icons = review.stars
           - 5.times do
@@ -26,7 +34,13 @@
             %p
               = review.content
         %br
-        %a(href='#' class='btn btn-default default-button') Edit Review
-        %a(href='#' class='btn btn-default default-button') Delete Review
+        = link_to 'Edit',
+          edit_user_company_review_path(@user, review.company, review),
+          class: 'btn btn-default default-button'
+        = link_to 'Delete',
+          user_company_review_path(@user, review.company, review),
+          method: :delete,
+          data: { confirm: 'Do you want to delete this Review?' },
+          class: 'btn btn-default default-button'
         %hr
 
