--- a/app/views/ui/about-me-my-friends.html.haml
+++ b/app/views/ui/about-me-my-friends.html.haml
@@ -30,77 +30,77 @@
     %ul.list-of-friends
       %li
         %span.cl-effect-12
-          %a(href='#')= fa_icon 'user-secret', text: 'Mary Smith'
+          %a(href='#')= fa_icon 'child', text: 'Mary Smith'
           %span(class='pull-right')
             %a(href='#' class='green smaller-icon')= fa_icon 'envelope-o', text: 'send mail'
             %a(href='#' class='smaller-icon')= fa_icon 'ban', text: 'block'
 
       %li
         %span.cl-effect-12
-          %a(href='#')= fa_icon 'user-secret', text: 'Mary Smith'
+          %a(href='#')= fa_icon 'child', text: 'Mary Smith'
           %span(class='pull-right')
             %a(href='#' class='green smaller-icon')= fa_icon 'envelope-o', text: 'send mail'
             %a(href='#' class='smaller-icon')= fa_icon 'ban', text: 'block'
 
       %li
         %span.cl-effect-12
-          %a(href='#')= fa_icon 'user-secret', text: 'Mary Smith'
+          %a(href='#')= fa_icon 'child', text: 'Mary Smith'
           %span(class='pull-right')
             %a(href='#' class='green smaller-icon')= fa_icon 'envelope-o', text: 'send mail'
             %a(href='#' class='smaller-icon')= fa_icon 'ban', text: 'block'
 
       %li
         %span.cl-effect-12
-          %a(href='#')= fa_icon 'user-secret', text: 'Mary Smith'
+          %a(href='#')= fa_icon 'child', text: 'Mary Smith'
           %span(class='pull-right')
             %a(href='#' class='green smaller-icon')= fa_icon 'envelope-o', text: 'send mail'
             %a(href='#' class='smaller-icon')= fa_icon 'ban', text: 'block'
 
       %li
         %span.cl-effect-12
-          %a(href='#')= fa_icon 'user-secret', text: 'Mary Smith'
+          %a(href='#')= fa_icon 'child', text: 'Mary Smith'
           %span(class='pull-right')
             %a(href='#' class='green smaller-icon')= fa_icon 'envelope-o', text: 'send mail'
             %a(href='#' class='smaller-icon')= fa_icon 'ban', text: 'block'
 
       %li
         %span.cl-effect-12
-          %a(href='#')= fa_icon 'user-secret', text: 'Mary Smith'
+          %a(href='#')= fa_icon 'child', text: 'Mary Smith'
           %span(class='pull-right')
             %a(href='#' class='green smaller-icon')= fa_icon 'envelope-o', text: 'send mail'
             %a(href='#' class='smaller-icon')= fa_icon 'ban', text: 'block'
 
       %li
         %span.cl-effect-12
-          %a(href='#')= fa_icon 'user-secret', text: 'Mary Smith'
+          %a(href='#')= fa_icon 'child', text: 'Mary Smith'
           %span(class='pull-right')
             %a(href='#' class='green smaller-icon')= fa_icon 'envelope-o', text: 'send mail'
             %a(href='#' class='smaller-icon')= fa_icon 'ban', text: 'block'
 
       %li
         %span.cl-effect-12
-          %a(href='#')= fa_icon 'user-secret', text: 'Mary Smith'
+          %a(href='#')= fa_icon 'child', text: 'Mary Smith'
           %span(class='pull-right')
             %a(href='#' class='green smaller-icon')= fa_icon 'envelope-o', text: 'send mail'
             %a(href='#' class='smaller-icon')= fa_icon 'ban', text: 'block'
 
       %li
         %span.cl-effect-12
-          %a(href='#')= fa_icon 'user-secret', text: 'Mary Smith'
+          %a(href='#')= fa_icon 'child', text: 'Mary Smith'
           %span(class='pull-right')
             %a(href='#' class='green smaller-icon')= fa_icon 'envelope-o', text: 'send mail'
             %a(href='#' class='smaller-icon')= fa_icon 'ban', text: 'block'
 
       %li
         %span.cl-effect-12
-          %a(href='#')= fa_icon 'user-secret', text: 'Mary Smith'
+          %a(href='#')= fa_icon 'child', text: 'Mary Smith'
           %span(class='pull-right')
             %a(href='#' class='green smaller-icon')= fa_icon 'envelope-o', text: 'send mail'
             %a(href='#' class='smaller-icon')= fa_icon 'ban', text: 'block'
 
       %li
         %span.cl-effect-12
-          %a(href='#')= fa_icon 'user-secret', text: 'Mary Smith'
+          %a(href='#')= fa_icon 'child', text: 'Mary Smith'
           %span(class='pull-right')
             %a(href='#' class='green smaller-icon')= fa_icon 'envelope-o', text: 'send mail'
             %a(href='#' class='smaller-icon')= fa_icon 'ban', text: 'block'
