--- a/app/views/ui/about-me-my-friends-pending.html.haml
+++ b/app/views/ui/about-me-my-friends-pending.html.haml
@@ -30,19 +30,19 @@
     %ul.list-of-friends
       %li
         %span.cl-effect-12
-          %a(href='#')= fa_icon 'user-secret', text: 'Mary Smith'
+          %a(href='#')= fa_icon 'street-view', text: 'Mary Smith'
           %span(class='pull-right')
             %a(href='#' class='smaller-icon green')= fa_icon 'check', text: 'Accept'
             %a(href='#' class='smaller-icon')= fa_icon 'trash-o', text: 'Reject'
       %li
         %span.cl-effect-12
-          %a(href='#')= fa_icon 'user-secret', text: 'Joe Biden'
+          %a(href='#')= fa_icon 'street-view', text: 'Joe Biden'
           %span(class='pull-right')
             %a(href='#' class='smaller-icon green')= fa_icon 'check', text: 'Accept'
             %a(href='#' class='smaller-icon')= fa_icon 'trash-o', text: 'Reject'
       %li
         %span.cl-effect-12
-          %a(href='#')= fa_icon 'user-secret', text: 'Bob Sagget'
+          %a(href='#')= fa_icon 'street-view', text: 'Bob Sagget'
           %span(class='pull-right')
             %a(href='#' class='smaller-icon green')= fa_icon 'check', text: 'Accept'
             %a(href='#' class='smaller-icon')= fa_icon 'trash-o', text: 'Reject'
