sending friend request is working

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -286,8 +286,10 @@ a.smaller-icon
 .big-stars
   font-size: 150%
 
-.fa-user-secret
-  color: desaturate(lighten($green, 16%), 30%)
+.fa-user-secret,
+.fa-child,
+.fa-street-view
+  color: desaturate(lighten($green, 3%), 1%)
 
 .nav.nav-tabs
   border-color: $brown
