--- a/app/views/friends/search.html.haml
+++ b/app/views/friends/search.html.haml
@@ -2,12 +2,7 @@
 %h5.text-center for
 .row
   .search-friend
-    .form-sign-up-log-in
-      %form.form-inline
-      = form_tag search_friend_path, class: 'form-inline', method: :get do
-        .form-group
-          = text_field_tag :name, @search_term, placeholder:'Name...', class: 'form-control'
-          = submit_tag 'Search', class: 'btn btn-default default-button'
+    = render 'form'
 .row
   .col-md-8.col-md-offset-2
     %ul.list-of-friends
