--- a/app/views/friends/index.html.haml
+++ b/app/views/friends/index.html.haml
@@ -2,11 +2,7 @@
 .row
   .search-friend
     .form-sign-up-log-in
-      %form.form-inline
-      = form_tag search_friend_path, class: 'form-inline', method: :get do
-        .form-group
-          = text_field_tag :name, nil, placeholder:'Name...', class: 'form-control'
-          = submit_tag 'Search', class: 'btn btn-default default-button'
+      = render 'form'
 .row
   %h3.text-center All Users
   .col-md-8.col-md-offset-2
@@ -16,4 +12,5 @@
           %span.cl-effect-12
             %a(href='#')= fa_icon 'user', text: "#{user.full_name}"
             %span(class='pull-right')
-              %a(href='#' class='smaller-icon green')= fa_icon 'paper-plane-o', text: 'Friend Request'
+              = link_to send_request_user_friend_path(current_user, user), class: 'smaller-icon green', method: :post do
+                = fa_icon 'paper-plane-o', text: 'Friend Request'
