--- a/app/views/companies/show.html.haml
+++ b/app/views/companies/show.html.haml
@@ -10,28 +10,35 @@
     .col-md-6
       %h1
         = @company.name
-      .col-md-7
-        .col-md-12.company-stars
-          - @company.categories.each do |category|
-            = link_to category.title, category_path(category), class: 'label label-primary'
-        .average-stars.col-md-12.company-stars
-          - full_stars = average_rating(@company)
-          - 5.times do
-            - if full_stars > 0
-              = fa_icon 'star'
-              - full_stars -= 1
-            - else
-              = fa_icon 'star-o'
-          %div.company-reviews
-            = "#{@company.reviews.count} Reviews"
-        .col-md-12.eur.eur-all
-          - full_euro_icons = @company.price_range
-          - 5.times do
-            - if full_euro_icons > 0
-              = fa_icon 'eur', class: 'eur-full'
-              - full_euro_icons -= 1
-            - else
-              = fa_icon 'eur', class: 'eur-empty'
+      %p
+        = "#{@city.name}, #{@city.country}"
+      .col-md-12.company-stars
+        - @company.categories.each do |category|
+          = link_to category.title, category_path(category), class: 'label label-primary'
+      .average-stars.col-md-12.company-stars
+        - full_stars = average_rating(@company)
+        - 5.times do
+          - if full_stars > 0
+            = fa_icon 'star'
+            - full_stars -= 1
+          - else
+            = fa_icon 'star-o'
+        %div.company-reviews
+          = "#{@company.reviews.count} Reviews"
+      .col-md-12.eur.eur-all
+        - full_euro_icons = @company.price_range
+        - 5.times do
+          - if full_euro_icons > 0
+            = fa_icon 'eur', class: 'eur-full'
+            - full_euro_icons -= 1
+          - else
+            = fa_icon 'eur', class: 'eur-empty'
+      .text-center
+        - if @reviews.any?
+          %h3 Reviews
+          %h5 for this Company
+        - else
+          %h4 No Reviews for this Company
       - @reviews.each do |review|
         .review
           .row.col-md-12
@@ -67,11 +74,5 @@
     .col-md-6
       %div(style='width: 540px')
         %div(id='map' style='width: 540px; height: 400px')
-      -# .company-google-map
-      -#   %iframe{:frameborder => "0", :height => "443", :marginheight => "0", :marginwidth => "0", :scrolling => "no", :src => "https://maps.google.com/maps?hl=en&q=Pariser Platz, 10117 Berlin&ie=UTF8&t=terrain&z=6&iwloc=B&output=embed", :width => "540"}
-      -#     %div
-      -#       %small
-      -#         %a{:href => "http://embedgooglemaps.com"} embedgooglemaps.com
-      -#     %div
-      -#       %small
-      -#         %a{:href => "http://premiumlinkgenerator.com/keep2share-cc"} keep2share premium link generator
+
+= render 'shared/custom_gmap'
