adds feature of sending and receiving messages

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -275,9 +275,9 @@ a.smaller-icon
   li:last-child
     border-bottom: none
 
-.rating-textarea
+#message_content.rating-textarea
   background-color: rgba(#fff, 0.0)
-  border: 2px solid $brown
+  border: 1px solid $brown
   border-radius: 5px
   width: 700px
   height: 400px
