fixed text-area bug

--- a/app/views/users/my_friends.html.haml
+++ b/app/views/users/my_friends.html.haml
@@ -23,7 +23,7 @@
               = link_to '#' do
                 = fa_icon 'child', text: user.full_name
               %span(class='pull-right')
-                = link_to '#', class: 'green smaller-icon' do
+                = link_to new_user_message_path(user), class: 'green smaller-icon' do
                   =fa_icon 'envelope-o', text: 'send mail'
                 = link_to block_user_path(current_user, user), class: 'smaller-icon', method: :post do
                   =fa_icon 'ban', text: 'block'
