--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -275,7 +275,8 @@ a.smaller-icon
   li:last-child
     border-bottom: none
 
-#message_content.rating-textarea
+#message_content.rating-textarea,
+.rating-textarea
   background-color: rgba(#fff, 0.0)
   border: 1px solid $brown
   border-radius: 5px
