--- a/app/views/messages/show.html.haml
+++ b/app/views/messages/show.html.haml
@@ -9,11 +9,13 @@
     %p
       = @message.content
     %br
-    %a(href='#' class='btn btn-primary')= fa_icon 'share', text: 'reply'
-    %a(href='#' class='btn btn-primary')= fa_icon 'tag', text: 'important'
-    %a(href='#' class='btn btn-primary')= fa_icon 'trash-o', text: 'delete'
-
-%br
-.text-center
-  = link_to 'Back', :back, class: 'btn btn-lg btn-default default-button'
-
+    = link_to new_user_message_path(@friend.id), class: 'btn btn-primary' do
+      =fa_icon 'share', text: 'reply'
+    - if @message.important
+      = link_to unimportant_user_message_path(current_user.id, @message.id), class: 'btn btn-primary', method: :post do
+        = fa_icon 'tag', text: 'unimportant'
+    - else
+      = link_to important_user_message_path(current_user.id, @message.id), class: 'btn btn-primary', method: :post do
+        = fa_icon 'tag', text: 'important'
+    = link_to user_message_path(current_user.id, @message.id, from_show_page: 'true'), class: 'btn btn-primary', method: :delete do
+      =fa_icon 'trash-o', text: 'delete'
