--- a/app/views/categories/show.html.haml
+++ b/app/views/categories/show.html.haml
@@ -1,5 +1,5 @@
 %h1.large-heading.text-center Category
 %h3.text-center
-  = @category.title
+  = @current_category.title
 
 = render 'shared/list_companies'
