--- a/app/views/reviews/listed_companies.html.haml
+++ b/app/views/reviews/listed_companies.html.haml
@@ -1,4 +1,4 @@
 %h1.large-heading.text-center Write a Review
 %h4.text-center for listed Companies below
 
-= render 'shared/list_companies'
+= render "shared/list_companies", companies: @companies
