--- a/app/views/static_pages/about_us.html.haml
+++ b/app/views/static_pages/about_us.html.haml
@@ -1,11 +1,11 @@
 %h1.text-center.large-heading About us
 %p.text-center
-  No us just me. So if a I can build this simple web app so can 
+  No us just 
+  %span.bevan
+    me. 
+  So if a I can build this simple web app so can 
   %span.bevan
     YOU! 
-  Watch how I built this app on
-  %span.cl-effect-12
-    %a(href='#')Livecoding.tv 
 .toni-portrait
   = image_tag ('picture-toni.jpg')
 
