adds Feature test for checking main menu and left menu and user interacting with a review feature

--- a/app/views/shared/_list_companies.html.haml
+++ b/app/views/shared/_list_companies.html.haml
@@ -35,7 +35,7 @@
         - if current_user.reviews.pluck(:company_id).include?(company.id)
           = link_to 'Write a review', '#', class: 'btn btn-primary disabled'
         - else
-          = link_to 'Write  a Review', new_user_company_review_path(company.owner, company), class: 'btn btn-primary'
+          = link_to 'Write a Review', new_user_company_review_path(company.owner, company), class: 'btn btn-primary', id: "company-#{company.id}"
 
     %hr
 
