adds Feature tests to the app

--- a/app/views/friends/_form.html.haml
+++ b/app/views/friends/_form.html.haml
@@ -1,5 +1,5 @@
 = form_tag search_friend_path, class: 'form-inline', method: :get do
   .form-group
-    = text_field_tag :name, @search_term, placeholder:'Name...', class: 'form-control'
-    = submit_tag 'Search', class: 'btn btn-default default-button'
+    = text_field_tag :name, @search_term, placeholder:'Name...', class: 'form-control', id: 'find-friend-form'
+    = submit_tag 'Search', class: 'btn btn-default default-button', id: 'find-friend-button'
 
