--- a/app/views/companies/edit.html.haml
+++ b/app/views/companies/edit.html.haml
@@ -1,4 +1,4 @@
-%h1.text-center.large-heading Add new Company
+%h1.text-center.large-heading Edit Company
 %br
 .row
   = render 'shared/left_navigation'
