adds admin flag interface

--- a/app/views/shared/_left_navigation.html.haml
+++ b/app/views/shared/_left_navigation.html.haml
@@ -23,3 +23,5 @@
           = link_to 'Add new Category', new_category_path
         %li(role='presentation' class="#{cp(users_path)}")
           = link_to 'All Users', users_path
+        %li(role='presentation' class="#{cp(flags_path)}")
+          = link_to 'Flags', flags_path
