--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -338,3 +338,11 @@ table
 
 .submit-form-button
   margin-left: 233.328px + 10px
+
+.video-presentation
+  iframe
+    border-radius: 10px
+    border: 5px #F09619 solid
+    transition: 0.5s all
+    &:hover
+      border-color: #FF512F
