--- a/app/views/static_pages/help.html.haml
+++ b/app/views/static_pages/help.html.haml
@@ -1,7 +1,15 @@
 .text-center
   %h1.large-heading Help
   %p This app is really easy to use if you know how the real Yelp app works.
-  %p If not you can watch quick video presentation on
-  %span.cl-effect-12
-    %a(href='#')LiveCoding.tv
-
+  %p If not you can watch quick video presentation on the video below.
+  %br
+  .video-presentation
+    %iframe{:allowfullscreen => "", :frameborder => "0", :height => "534", :src => "https://www.youtube.com/embed/o1zB4zvjSzM", :width => "950"}
+%br
+%br
+  %p.text-center
+    I also coded live for about and hour on 
+    %span.cl-effect-12
+      %a(href='#')LiveCoding.tv
+%br
+%br
