changes to README file

--- a/app/views/static_pages/about_us.html.haml
+++ b/app/views/static_pages/about_us.html.haml
@@ -1,12 +1,17 @@
 %h1.text-center.large-heading About us
-%p.text-center
-  No us just 
-  %span.bevan
-    me. 
-  So if a I can build this simple web app so can 
-  %span.bevan
-    YOU! 
+.text-center
+  %p
+    No us just 
+    %span.bevan
+      me. 
+    So if a I can build this simple app so can 
+    %span.bevan
+      YOU! 
+  %p
+    You can clone and fork this app on my
+    %span.cl-effect-12
+      %a(href='https://github.com/programmertoni/LiveCoding-Yelp-clone-app') GitHub repository
 .toni-portrait
   = image_tag ('picture-toni.jpg')
-
-
+  %p If you have any questions feel free to send me an email at programmertoni { at } gmail.com
+  %br
