--- a/app/views/reviews/recent.html.haml
+++ b/app/views/reviews/recent.html.haml
@@ -1,7 +1,7 @@
 %h1.text-center.large-heading Welcome!
 %p.welcome-text People use Yelp to search for everything from the city's tastiest burger to the most renowned cardiologist. This web app is clone of the real Yelp site and was made for educational purpose. Try it out and have fun.
 .text-center
-  %a(href='#' class='btn btn-primary tutorial') Tutorial
+  = link_to 'Tutorial', help_path, class: 'btn btn-primary tutorial'
   %br
   - unless logged_in?
     = link_to 'Sign up', signup_path, class: 'btn btn-primary'
