--- a/app/views/static_pages/about_us.html.haml
+++ b/app/views/static_pages/about_us.html.haml
@@ -8,7 +8,7 @@
     %span.bevan
       YOU! 
   %p
-    You can clone and fork this app on my
+    You can clone and fork the App on this
     %span.cl-effect-12
       %a(href='https://github.com/programmertoni/LiveCoding-Yelp-clone-app') GitHub repository
 .toni-portrait
