--- a/app/views/users/reviews.html.haml
+++ b/app/views/users/reviews.html.haml
@@ -15,10 +15,10 @@
       .review
         .row.col-md-12
           %span.cl-effect-12
-            = link_to shorten_full_name(review.user.full_name), '#'
+            = link_to shorten_full_name(review.user.full_name), public_reviews_user_path(review.user)
           wrote a review for
           %span.cl-effect-12
-            = link_to review.company.name, '#'
+            = link_to review.company.name, user_company_path(review.company.owner, review.company)
           %span.pull-right.time-ago= fa_icon 'clock-o',
             text: "#{time_ago_in_words(review.created_at)} ago"
         .row.review-stars.col-md-12
