--- a/app/views/static_pages/about_us.html.haml
+++ b/app/views/static_pages/about_us.html.haml
@@ -10,7 +10,7 @@
   %p
     You can clone and fork the App on this
     %span.cl-effect-12
-      %a(href='https://github.com/programmertoni/LiveCoding-Yelp-clone-app') GitHub repository
+      = link_to 'GitHub repository', 'https://github.com/programmertoni/LiveCoding-Yelp-clone-app', target: :blankd
 .toni-portrait
   = image_tag ('picture-toni.jpg')
   %p If you have any questions feel free to send me an email at programmertoni { at } gmail . com
