adds youtube video to help page

--- a/app/views/static_pages/help.html.haml
+++ b/app/views/static_pages/help.html.haml
@@ -4,7 +4,7 @@
   %p If not you can watch quick video presentation below.
   %br
   .video-presentation
-    %iframe{:allowfullscreen => "", :frameborder => "0", :height => "534", :src => "https://www.youtube.com/embed/o1zB4zvjSzM", :width => "950"}
+    %iframe{:allowfullscreen => "", :frameborder => "0", :height => "534", :src => "https://www.youtube.com/embed/qvzFC7T8PL0", :width => "950"}
 %br
 %br
   %p.text-center
