adds changes to about us page

--- a/app/views/static_pages/about_us.html.haml
+++ b/app/views/static_pages/about_us.html.haml
@@ -10,7 +10,8 @@
   %p
     You can clone and fork the App on this
     %span.cl-effect-12
-      = link_to 'GitHub repository', 'https://github.com/programmertoni/LiveCoding-Yelp-clone-app', target: :blankd
+      = link_to 'GitHub repository.',
+        'https://github.com/programmertoni/LiveCoding-Yelp-clone-app', target: :blank
 .toni-portrait
   = image_tag ('picture-toni.jpg')
   %p If you have any questions feel free to send me an email at programmertoni { at } gmail . com
